specs/repo-setup/.orbit/post-completion-run-3-session.txt
Orbit Post-Completion Session Log
========================================

Session ID: e69605e0-e35a-41ce-819b-36285489eefa
Started:    2026-03-10T12:22:36+11:00
Ended:      2026-03-10T12:24:30+11:00
Duration:   1m51.559s
Cost:       $0.5099
Turns:      13
Error:      false

Output:
----------------------------------------
The implementation looks solid. Here's my review summary:

**Requirements met:**

| Area | Status | Notes |
|------|--------|-------|
| Package list (gh, go) | ✅ | Line 54 |
| Logging to ~/SETUP.log | ✅ | Uses `exec > >(tee -a)` — better than per-command tee |
| Dependency verification | ✅ | Lines 87-93, exits if gh/go/git missing |
| User input (2 prompts) | ✅ | Email + name with re-prompt on empty |
| SSH key setup | ✅ | All 8 sub-requirements met |
| SSH deduplication check | ✅ | Fingerprint comparison before upload |
| Git config | ✅ | Heredoc embed (decision log approved this over curl) |
| ~/repos/ creation | ✅ | With idempotency check |
| Repo cloning (4 repos) | ✅ | SSH protocol, `.git` existence check |
| Skills symlink | ✅ | 3-state check, proper `$SYMLINK_SETUP` tracking |
| Go tools (make + fallback) | ✅ | `go install ./...` is better than bare `go install` |
| PATH verification | ✅ | Lines 306-318 |
| Summary message | ✅ | Format matches req 9.8 |

**Minor discrepancy (non-functional):**

- Design shows `name = "$GIT_NAME"` with quotes in the gitconfig heredoc; implementation uses `name = $GIT_NAME` without quotes. Gitconfig doesn't require quotes for values with spaces, so this is functionally correct.

**No issues found.** The implementation is correct, the script syntax is valid, and all requirements are met (with the heredoc gitconfig approach explicitly approved in the decision log as a design override to the original curl-based approach).

Stderr:
----------------------------------------

